stopped flickering on anchor tag

--- a/styles.scss
+++ b/styles.scss
@@ -104,12 +104,7 @@
       background: linear-gradient(149deg, 0,0,128,.8);
       border: 10px solid #fff;
       box-shadow: 1px 1px 1px 1px rgba(189,193,194,0.3) inset;
-      a {
-        position: relative;
-        z-index: 10000;
-      }
       .img {
-        pointer-events:auto;
         position:relative;
       }
       .description {
@@ -134,8 +129,7 @@
         a {
           font-family: "kulturista-web";
           color:white;
-          cursor:auto;
-          text-decoration:none;
+          cursor:pointer;
         }
       }
       img {
